--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bitcoinjs-lib": "^5.2.0",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
