--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/react": "18.0.27",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6"
+    "eslint-config-next": "13.1.6",
+    "typescript": "4.9.5"
   }
 }
